--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book Market</title>
+    <title>Book Store</title>
     <!-- link css bootsrtrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -21,7 +21,7 @@
       <!-- header -->
       <header id="header">
         <h1 class="text-title nameSite">
-          Book Market
+          Book Store
         </h1>
         <a href="/login" class="btn btn-success btnHead">Login</a>
         <a href="/admin" class="btn btn-success btnHead">Admin</a>
