--- a/src/views/noteFound.ejs
+++ b/src/views/noteFound.ejs
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Note Found</title>
+  <link rel="icon" type="image/jpg" href="/images/image-icon.jpg" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="/styles/noteFound.css">
