--- a/src/public/styles/homeStyle.css
+++ b/src/public/styles/homeStyle.css
@@ -6,12 +6,12 @@
 }
 
 /* coverage div */
-
 .box {
   margin: 3px auto;
   padding: 0;
-  width: 1450px;
+  max-width: 1450px;
   height: auto;
+  width: 100%;
 }
 
 /* header */
@@ -21,19 +21,17 @@ header {
   margin: 0;
   padding: 0;
   background-image: url("/images/k1.jpg");
-  /* background-image: url('');   */
   background-repeat: no-repeat;
   background-size: cover;
   filter: brightness(110%);
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items:center;
+  align-items: center;
   border-radius: 10px;
-  /* filter: blur(.9px); */
 }
 
-.nameSite{
+.nameSite {
   position: relative;
   top: -15vh;
   color: white;
@@ -41,16 +39,13 @@ header {
   margin: 0;
   text-align: center;
   font-size: 6rem;
- 
 }
 
-.btnHead{
- position: relative;
- top: 15vh;
- margin: 20px;
+.btnHead {
+  position: relative;
+  top: 15vh;
+  margin: 20px;
 }
-
-
 
 /* main */
 main {
@@ -66,15 +61,15 @@ main {
   gap: 20px;
 }
 
-/*  go top */
+/* go top */
 #toTop {
   display: block;
   position: fixed;
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  right: 20vh;
-  top: 75vh;
+  right: 20px;
+  bottom: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -94,6 +89,7 @@ main {
   transform: rotate(-60deg);
   right: -4px;
 }
+
 #toTop div:nth-child(2) {
   transform: rotate(60deg);
   left: -4px;
@@ -102,11 +98,6 @@ main {
 #toTop:hover {
   background-color: #0c0c0cee;
   transform: rotate(0deg);
-  div {
-    position: relative;
-    background-color: rgb(255, 255, 255);
-    top: -5px;
-  }
 }
 
 #cardStyle {
@@ -117,23 +108,21 @@ main {
   overflow-y: hidden;
   background-color: transparent;
   border: 1px double black;
- 
 }
+
 .imgCard {
   width: 100%;
   height: 48%;
   margin: 0;
-  /* overflow: hidden; */
 }
 
 .imgCard img {
   width: 100%;
   height: 100%;
-  object-fit:contain;
+  object-fit: contain;
   border: none;
   margin: 0;
   position: relative;
-  
 }
 
 .tavsif {
@@ -144,5 +133,63 @@ main {
   overflow: hidden;
   font-size: 16px;
   font-family: sans-serif;
-  
+}
+
+/* Responsivlik qo‘shildi */
+@media (max-width: 1200px) {
+  .box {
+    max-width: 95%;
+  }
+  header {
+    height: 35rem;
+  }
+  .nameSite {
+    font-size: 4.5rem;
+  }
+  main {
+    gap: 15px;
+  }
+  #cardStyle {
+    width: 20rem;
+    height: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  header {
+    height: 30rem;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .nameSite {
+    font-size: 3.5rem;
+    top: -10vh;
+  }
+  .btnHead {
+    top: 5vh;
+    margin: 10px;
+  }
+  main {
+    flex-direction: column;
+    align-items: center;
+  }
+  #cardStyle {
+    width: 18rem;
+  }
+}
+
+@media (max-width: 576px) {
+  header {
+    height: 25rem;
+  }
+  .nameSite {
+    font-size: 3rem;
+    top: -5vh;
+  }
+  .btnHead {
+    top: 3vh;
+  }
+  #cardStyle {
+    width: 16rem;
+  }
 }
