--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Panel</title>
+    <link rel="icon" type="image/jpg" href="/images/image-icon.jpg" />
+
     <!-- link css from bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
