--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <link rel="icon" type="image/jpg" href="/images/image-icon.jpg" />
 
     <link rel="stylesheet" href="/styles/login.css">
 
