--- a/src/views/admin.ejs
+++ b/src/views/admin.ejs
@@ -115,7 +115,7 @@
                 class="form-control mb-4"
                 name="img"
                 type="text"
-                placeholder="Rasm linkini kiriting"
+                placeholder="Rasm linkini (https://image.com)"
               />
               <textarea
                 required
