--- a/src/public/styles/homeStyle.css
+++ b/src/public/styles/homeStyle.css
@@ -56,9 +56,9 @@ main {
   border-radius: 10px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: flex-start;
-  gap: 20px;
+  gap: 10px;
 }
 
 /* go top */
@@ -108,6 +108,15 @@ main {
   overflow-y: hidden;
   background-color: transparent;
   border: 1px double black;
+  border-radius: 10px;
+  transition: ease 0.3s;
+  cursor: pointer;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+#cardStyle:hover {
+  transform: scale(0.98);
+  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.775);
 }
 
 .imgCard {
